--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-streamlit>=1.24
-numpy>=1.21
-matplotlib>=3.4
-pandas==2.3.3
-scipy>=1.11
-numexpr>=2.9
-pytesseract>=0.3.10
-Pillow>=10.1.0
-openpyxl>=3.1.2
-torch>=2.1.0
-torchvision>=0.16.0
-torchaudio>=2.1.0
+streamlit
+numpy
+matplotlib
+pandas
+scipy
+numexpr
+pytesseract
+Pillow
+openpyxl
+torch
+torchvision
+torchaudio
+sgtpy
+python-ternary
